# web_scraper

./: .gitignore  README.md  pyproject.toml
data/: reddit_comments.txt  tweets_live_hot.txt  tweets_live_live.txt
openai_api/: chatgpt_api_test.py
reddit/: reddit.ipynb  reddit.py  scrape.py
x/: run_x.py  x.ipynb
